--- a/.github/workflows/Cloudrun.yml
+++ b/.github/workflows/Cloudrun.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloud Run
+name: "Deploy to Cloud Run"
 on:
   push:
     branches: [main]
@@ -9,19 +9,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v2
         with:
           persist-credentials: false
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+      - name: "Set up Google Cloud SDK"
+        uses: google-github-actions/setup-gcloud@main
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Build and push Docker image to Google Container Registry
+      - name: "Build and push Docker image to Google Container Registry"
         id: build-image
         env:
           GCR_REGISTRY: gcr.io
@@ -35,18 +35,18 @@ jobs:
           docker push $GCR_REGISTRY/$GCP_PROJECT_ID/app-google:latest
           echo "::set-output name=image::$GCR_REGISTRY/$GCP_PROJECT_ID/app-google:$IMAGE_TAG"
 
-      - name: Deploy to Cloud Run
-        id: deploy-cloudrun
-        uses: google-github-actions/deploy-cloudrun@main
+      - name: "Deploy to Cloud Run"
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v1
         with:
           image: ${{ steps.build-image.outputs.image }}
           service: app-google
-          region: us-central1
+          region: europe-west1
           platform: managed
           memory: 512Mi
           concurrency: 80
           max-instances: 1
           allow-unauthenticated: true
 
-      - name: Cloud Run output
-        run: echo 'Cloud Run URL: ${{ steps.deploy-cloudrun.outputs.url }}'
+      - name: "Cloud Run output"
+        run: 'curl "${{ steps.deploy.outputs.url }}"
