--- a/.github/workflows/Cloudrun.yml
+++ b/.github/workflows/Cloudrun.yml
@@ -1,53 +1,56 @@
-name: "Deploy to Cloud Run"
+name: Deploy to Cloud Run
+
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           persist-credentials: false
 
-      - name: "Set up Google Cloud SDK"
-        uses: google-github-actions/setup-gcloud@main
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1.0.0
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-
-      - name: "Build and push Docker image to Google Container Registry"
+          service_account_key: |
+            ${{ secrets.GCP_SA_KEY }}
+            
+      - name: Build and push Docker image to Artifact Registry
         id: build-image
-        env:
-          GCR_REGISTRY: gcr.io
-          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-          IMAGE_TAG: ${{ github.sha }}
         run: |
-          echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
-          docker build -t $GCR_REGISTRY/$GCP_PROJECT_ID/app-google:$IMAGE_TAG .
-          docker tag $GCR_REGISTRY/$GCP_PROJECT_ID/app-google:$IMAGE_TAG $GCR_REGISTRY/$GCP_PROJECT_ID/app-google:latest
-          docker push $GCR_REGISTRY/$GCP_PROJECT_ID/app-google:$IMAGE_TAG
-          docker push $GCR_REGISTRY/$GCP_PROJECT_ID/app-google:latest
-          echo "::set-output name=image::$GCR_REGISTRY/$GCP_PROJECT_ID/app-google:$IMAGE_TAG"
-
-      - name: "Deploy to Cloud Run"
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }} .
+          docker tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }} gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:latest
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }}
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:latest
+        env:
+          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+        
+      - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v1
         with:
-          image: ${{ steps.build-image.outputs.image }}
-          service: app-google
-          region: europe-west1
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }}
+          service: Google.Actions
+          region: ${{ secrets.GCP_CLOUDRUN_REGION }}
           platform: managed
           memory: 512Mi
           concurrency: 80
           max-instances: 1
           allow-unauthenticated: true
 
-      - name: "Cloud Run output"
-        run: |
-          curl "${{ steps.deploy.outputs.url }}"
+      - name: Upload Outputs
+        uses: actions/upload-artifact@v2
+        with:
+          name: cloudrun-outputs
+          path: ${{ runner.workspace }}
+
+      - name: Print Cloud Run URL
+        run: echo "Cloud Run URL: ${{ steps.deploy.outputs.url }}"
