--- a/.github/workflows/Cloudrun.yml
+++ b/.github/workflows/Cloudrun.yml
@@ -51,3 +51,7 @@ jobs:
         with:
           name: cloudrun-outputs
           path: ${{ runner.workspace }}
+
+      - name: Print Cloud Run URL
+        run: |
+          echo "Cloud Run URL: ${{ steps.deploy.outputs.url }}" || true
