--- a/.github/workflows/Cloudrun.yml
+++ b/.github/workflows/Cloudrun.yml
@@ -1,8 +1,9 @@
 name: Deploy to Cloud Run
+
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -15,12 +16,12 @@ jobs:
           persist-credentials: false
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
+        uses: google-github-actions/setup-gcloud@v1.0.0
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-
+          service_account_key: |
+            ${{ secrets.GCP_SA_KEY }}
+            
       - name: Build and push Docker image to Artifact Registry
         id: build-image
         env:
@@ -34,13 +35,12 @@ jobs:
           docker build -t us-central1-docker.pkg.dev/$GCP_PROJECT_ID/app-google:$IMAGE_TAG .
           docker push us-central1-docker.pkg.dev/$GCP_PROJECT_ID/app-google:$IMAGE_TAG
           docker push us-central1-docker.pkg.dev/$GCP_PROJECT_ID/app-google:latest
-          echo "::set-output name=image::us-central1-docker.pkg.dev/$GCP_PROJECT_ID/app-google:$IMAGE_TAG"
-
+        
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v1
         with:
-          image: ${{ steps.build-image.outputs.image }}
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }}
           service: Google.Actions
           region: ${{ secrets.GCP_CLOUDRUN_REGION }}
           platform: managed
@@ -48,4 +48,13 @@ jobs:
           concurrency: 80
           max-instances: 1
           allow-unauthenticated: true
-        continue-on-error: true
+
+      - name: Upload Outputs
+        uses: actions/upload-artifact@v2
+        with:
+          name: cloudrun-outputs
+          path: ${{ runner.workspace }}
+
+      - name: Print Cloud Run URL
+        run: |
+          echo "Cloud Run URL: ${{ steps.deploy.outputs.url }}" || true
