--- a/.github/workflows/Cloudrun.yml
+++ b/.github/workflows/Cloudrun.yml
@@ -24,17 +24,14 @@ jobs:
             
       - name: Build and push Docker image to Artifact Registry
         id: build-image
+        run: |
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }} .
+          docker tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }} gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:latest
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:${{ github.sha }}
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/google-actions:latest
         env:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-          GCP_REGION: ${{ secrets.GCP_CLOUDRUN_REGION }}
-          IMAGE_TAG: ${{ github.sha }}
-        run: |
-          cat ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
-          gcloud auth activate-service-account --key-file=key.json
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$GCP_PROJECT_ID/app-google:$IMAGE_TAG .
-          docker push us-central1-docker.pkg.dev/$GCP_PROJECT_ID/app-google:$IMAGE_TAG
-          docker push us-central1-docker.pkg.dev/$GCP_PROJECT_ID/app-google:latest
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         
       - name: Deploy to Cloud Run
         id: deploy
