--- a/.github/workflows/Cloudrun.yml
+++ b/.github/workflows/Cloudrun.yml
@@ -19,8 +19,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v1.0.0
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: |
-            ${{ secrets.GCP_SA_KEY }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }} 
             
       - name: Authenticate to Google Cloud Artifact Registry
         run: gcloud auth configure-docker
